--- a/MsgQ/MsgQ.vcxproj.filters
+++ b/MsgQ/MsgQ.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClInclude Include="dispatch_queue.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="TimeElapsed.hpp">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
