用并发队列

--- a/MsgQ/MsgQ.vcxproj.filters
+++ b/MsgQ/MsgQ.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClInclude Include="TimeElapsed.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="blockingconcurrentqueue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="concurrentqueue.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
