--- a/MsgQ/MsgQ.vcxproj.filters
+++ b/MsgQ/MsgQ.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClInclude Include="TimeElapsed.hpp">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="delegate.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MsgQ.cpp">
