--- a/MsgQ/MsgQ.vcxproj
+++ b/MsgQ/MsgQ.vcxproj
@@ -146,8 +146,10 @@
     <Text Include="ReadMe.txt" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="concurrentqueue.h" />
     <ClInclude Include="delegate.h" />
     <ClInclude Include="dispatch_queue.h" />
+    <ClInclude Include="Test.h" />
     <ClInclude Include="TimeElapsed.hpp" />
   </ItemGroup>
   <ItemGroup>
